--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,16 @@
   <div class="flex flex-col md:flex-row gap-6 justify-center items-start">
     
     <!-- WAN1 Section -->
-    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
+    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96 flex flex-col items-center">
       <h3 class="text-xl font-semibold text-center mb-4">WAN1</h3>
-      <label for="ipAddress-WAN1" class="block mb-1 font-medium">Enter IP Address:</label>
+      <label for="ipAddress-WAN1" class="block mb-1 font-medium text-center">Enter IP Address:</label>
       <input type="text" id="ipAddress-WAN1" placeholder="e.g., 8.8.8.8"
-             class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 mb-3" />
+             class="w-full max-w-xs px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 mb-3 text-center" />
       <div class="flex gap-2 mb-3">
         <button onclick="runLookup('WAN1')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
         <button onclick="clearForm('WAN1')" class="bg-gray-300 hover:bg-gray-400 text-black px-4 py-2 rounded">Clear</button>
       </div>
-      <div id="result-WAN1" class="border border-gray-300 bg-gray-100 p-4 rounded text-sm font-mono text-center min-h-[50px] whitespace-pre-wrap mb-3"></div>
+      <div id="result-WAN1" class="border border-gray-300 bg-gray-100 p-4 rounded text-sm font-mono text-center min-h-[50px] whitespace-pre-wrap mb-3 w-full"></div>
       <div class="flex items-center justify-center">
         <button onclick="copyToClipboard('WAN1')" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Copy to Clipboard</button>
         <span id="copyMessage-WAN1" class="text-green-600 font-semibold ml-3 hidden">✔ Copied!</span>
@@ -33,16 +33,16 @@
     </div>
 
     <!-- WAN2 Section -->
-    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
+    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96 flex flex-col items-center">
       <h3 class="text-xl font-semibold text-center mb-4">WAN2</h3>
-      <label for="ipAddress-WAN2" class="block mb-1 font-medium">Enter IP Address:</label>
+      <label for="ipAddress-WAN2" class="block mb-1 font-medium text-center">Enter IP Address:</label>
       <input type="text" id="ipAddress-WAN2" placeholder="e.g., 1.1.1.1"
-             class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 mb-3" />
+             class="w-full max-w-xs px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 mb-3 text-center" />
       <div class="flex gap-2 mb-3">
         <button onclick="runLookup('WAN2')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
         <button onclick="clearForm('WAN2')" class="bg-gray-300 hover:bg-gray-400 text-black px-4 py-2 rounded">Clear</button>
       </div>
-      <div id="result-WAN2" class="border border-gray-300 bg-gray-100 p-4 rounded text-sm font-mono text-center min-h-[50px] whitespace-pre-wrap mb-3"></div>
+      <div id="result-WAN2" class="border border-gray-300 bg-gray-100 p-4 rounded text-sm font-mono text-center min-h-[50px] whitespace-pre-wrap mb-3 w-full"></div>
       <div class="flex items-center justify-center">
         <button onclick="copyToClipboard('WAN2')" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Copy to Clipboard</button>
         <span id="copyMessage-WAN2" class="text-green-600 font-semibold ml-3 hidden">✔ Copied!</span>
