--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
 
   <h2 class="text-2xl font-bold text-center mb-6">Whois Lookup - WAN1 & WAN2</h2>
 
-  <div class="flex flex-col md:flex-row gap-6 justify-center items-start">
+  <div class="wan-container">
     
     <!-- WAN1 Section -->
-    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96 flex flex-col items-center">
+  <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN1</h3>
       <label for="ipAddress-WAN1" class="block mb-1 font-medium text-center">Enter IP Address:</label>
       <input type="text" id="ipAddress-WAN1" placeholder="e.g., 8.8.8.8"
@@ -33,7 +33,7 @@
     </div>
 
     <!-- WAN2 Section -->
-    <div class="bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96 flex flex-col items-center">
+  <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN2</h3>
       <label for="ipAddress-WAN2" class="block mb-1 font-medium text-center">Enter IP Address:</label>
       <input type="text" id="ipAddress-WAN2" placeholder="e.g., 1.1.1.1"
