fix: tremendo como se le complica

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
         <button onclick="runLookup('WAN1')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
         <button onclick="clearForm('WAN1')" class="bg-gray-300 hover:bg-gray-400 text-black px-4 py-2 rounded">Clear</button>
       </div>
-      <div id="result-WAN1" class="border border-gray-300 bg-gray-100 p-4 rounded text-sm font-mono text-center min-h-[50px] whitespace-pre-wrap mb-3 w-full"></div>
+      <div id="result-WAN1" class="border border-gray-300 bg-gray-100 p-2 rounded text-sm font-mono text-center whitespace-pre-wrap mb-3 w-full"></div>
       <div class="flex items-center justify-center">
         <button onclick="copyToClipboard('WAN1')" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Copy to Clipboard</button>
         <span id="copyMessage-WAN1" class="text-green-600 font-semibold ml-3 hidden">✔ Copied!</span>
@@ -42,7 +42,7 @@
         <button onclick="runLookup('WAN2')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
         <button onclick="clearForm('WAN2')" class="bg-gray-300 hover:bg-gray-400 text-black px-4 py-2 rounded">Clear</button>
       </div>
-      <div id="result-WAN2" class="border border-gray-300 bg-gray-100 p-4 rounded text-sm font-mono text-center min-h-[50px] whitespace-pre-wrap mb-3 w-full"></div>
+      <div id="result-WAN2" class="border border-gray-300 bg-gray-100 p-2 rounded text-sm font-mono text-center whitespace-pre-wrap mb-3 w-full"></div>
       <div class="flex items-center justify-center">
         <button onclick="copyToClipboard('WAN2')" class="bg-green-600 hover:bg-green-700 text-white px-4 py-2 rounded">Copy to Clipboard</button>
         <span id="copyMessage-WAN2" class="text-green-600 font-semibold ml-3 hidden">✔ Copied!</span>
