--- a/public/index.html
+++ b/public/index.html
@@ -19,11 +19,13 @@
   <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN1</h3>
       <label for="ipAddress-WAN1" class="block mb-1 font-medium text-center">Enter IP Address:</label>
-      <input type="text" id="ipAddress-WAN1" placeholder="e.g., 8.8.8.8"
-             class="w-full max-w-xs px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 mb-3 text-center" />
+      <div class="relative w-full max-w-xs mx-auto mb-3">
+        <input type="text" id="ipAddress-WAN1" placeholder="e.g., 8.8.8.8"
+               class="w-full px-3 py-2 pr-8 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center" />
+        <button onclick="clearForm('WAN1')" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-lg font-bold">&times;</button>
+      </div>
       <div class="flex gap-2 mb-3">
         <button onclick="runLookup('WAN1')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
-        <button onclick="clearForm('WAN1')" class="bg-gray-300 hover:bg-gray-400 text-black px-4 py-2 rounded">Clear</button>
       </div>
       <div id="result-WAN1" class="border border-gray-300 bg-gray-100 p-2 rounded text-sm font-mono text-center whitespace-pre-wrap mb-3 w-full"></div>
       <div class="flex items-center justify-center">
@@ -36,11 +38,13 @@
   <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN2</h3>
       <label for="ipAddress-WAN2" class="block mb-1 font-medium text-center">Enter IP Address:</label>
-      <input type="text" id="ipAddress-WAN2" placeholder="e.g., 1.1.1.1"
-             class="w-full max-w-xs px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 mb-3 text-center" />
+      <div class="relative w-full max-w-xs mx-auto mb-3">
+        <input type="text" id="ipAddress-WAN2" placeholder="e.g., 1.1.1.1"
+               class="w-full px-3 py-2 pr-8 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center" />
+        <button onclick="clearForm('WAN2')" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-lg font-bold">&times;</button>
+      </div>
       <div class="flex gap-2 mb-3">
         <button onclick="runLookup('WAN2')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
-        <button onclick="clearForm('WAN2')" class="bg-gray-300 hover:bg-gray-400 text-black px-4 py-2 rounded">Clear</button>
       </div>
       <div id="result-WAN2" class="border border-gray-300 bg-gray-100 p-2 rounded text-sm font-mono text-center whitespace-pre-wrap mb-3 w-full"></div>
       <div class="flex items-center justify-center">
