--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       <div class="relative w-full max-w-xs mx-auto mb-3">
         <input type="text" id="ipAddress-WAN1" placeholder="e.g., 8.8.8.8"
                class="w-full px-3 py-2 pr-8 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center" />
-        <button onclick="clearForm('WAN1')" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-lg font-bold">&times;</button>
+        <button onclick="clearForm('WAN1')" class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl cursor-pointer bg-transparent border-0 p-0 h-auto w-auto">&times;</button>
       </div>
       <div class="flex gap-2 mb-3">
         <button onclick="runLookup('WAN1')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
@@ -41,7 +41,7 @@
       <div class="relative w-full max-w-xs mx-auto mb-3">
         <input type="text" id="ipAddress-WAN2" placeholder="e.g., 1.1.1.1"
                class="w-full px-3 py-2 pr-8 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center" />
-        <button onclick="clearForm('WAN2')" class="absolute right-2 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-lg font-bold">&times;</button>
+        <button onclick="clearForm('WAN2')" class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl cursor-pointer bg-transparent border-0 p-0 h-auto w-auto">&times;</button>
       </div>
       <div class="flex gap-2 mb-3">
         <button onclick="runLookup('WAN2')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
