--- a/public/index.html
+++ b/public/index.html
@@ -13,18 +13,25 @@
 
   <h2 class="text-2xl font-bold text-center mb-6">Whois Lookup - WAN1 & WAN2</h2>
 
-  <div class="wan-container">
+  <div class="wan-container flex justify-center gap-6">
     
     <!-- WAN1 Section -->
-  <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
+    <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN1</h3>
       <label for="ipAddress-WAN1" class="block mb-1 font-medium text-center">Enter IP Address:</label>
       <div class="relative w-full max-w-xs mx-auto mb-3">
-        <input type="text" id="ipAddress-WAN1" placeholder="e.g., 8.8.8.8"
-               class="w-full px-3 py-2 pr-10 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center" />
-        <button onclick="clearForm('WAN1')" class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl cursor-pointer bg-transparent border-0 p-0 h-auto w-auto z-10">&times;</button>
+        <input
+          type="text"
+          id="ipAddress-WAN1"
+          placeholder="e.g., 8.8.8.8"
+          class="w-full px-3 py-2 pr-10 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center"
+        />
+        <button
+          onclick="clearForm('WAN1')"
+          class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl cursor-pointer bg-transparent border-0 p-1 z-10"
+        >&times;</button>
       </div>
-      <div class="flex gap-2 mb-3">
+      <div class="flex gap-2 mb-3 justify-center">
         <button onclick="runLookup('WAN1')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
       </div>
       <div id="result-WAN1" class="border border-gray-300 bg-gray-100 p-2 rounded text-sm font-mono text-center whitespace-pre-wrap mb-3 w-full"></div>
@@ -35,15 +42,22 @@
     </div>
 
     <!-- WAN2 Section -->
-  <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
+    <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN2</h3>
       <label for="ipAddress-WAN2" class="block mb-1 font-medium text-center">Enter IP Address:</label>
       <div class="relative w-full max-w-xs mx-auto mb-3">
-        <input type="text" id="ipAddress-WAN2" placeholder="e.g., 1.1.1.1"
-               class="w-full px-3 py-2 pr-10 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center" />
-        <button onclick="clearForm('WAN2')" class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl cursor-pointer bg-transparent border-0 p-0 h-auto w-auto z-10">&times;</button>
+        <input
+          type="text"
+          id="ipAddress-WAN2"
+          placeholder="e.g., 1.1.1.1"
+          class="w-full px-3 py-2 pr-10 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center"
+        />
+        <button
+          onclick="clearForm('WAN2')"
+          class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 hover:text-gray-700 text-xl cursor-pointer bg-transparent border-0 p-1 z-10"
+        >&times;</button>
       </div>
-      <div class="flex gap-2 mb-3">
+      <div class="flex gap-2 mb-3 justify-center">
         <button onclick="runLookup('WAN2')" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded">Run Lookup</button>
       </div>
       <div id="result-WAN2" class="border border-gray-300 bg-gray-100 p-2 rounded text-sm font-mono text-center whitespace-pre-wrap mb-3 w-full"></div>
