--- a/public/index.html
+++ b/public/index.html
@@ -19,19 +19,18 @@
     <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN1</h3>
       <label for="ipAddress-WAN1" class="block mb-1 font-medium text-center">Enter IP Address:</label>
-      <div class="flex items-center justify-center gap-2 mb-3">
-        <div class="relative w-full max-w-xs">
-          <input
-            type="text"
-            id="ipAddress-WAN1"
-            placeholder="e.g., 8.8.8.8"
-            class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center"
-          />
-        </div>
+      <div class="input-group w-full max-w-xs mx-auto mb-3">
+        <input
+          type="text"
+          id="ipAddress-WAN1"
+          placeholder="e.g., 8.8.8.8"
+          class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center"
+        />
         <button
           onclick="clearForm('WAN1')"
-          class="text-gray-400 hover:text-gray-600 text-xl cursor-pointer bg-transparent border-0 p-0 w-5 h-5 flex items-center justify-center"
+          class="clear-input text-gray-400 hover:text-gray-600 text-xl cursor-pointer bg-transparent border-0 p-0 w-5 h-5 flex items-center justify-center"
           aria-label="Clear input"
+          data-wan="WAN1"
         >&times;</button>
       </div>
       <div class="flex gap-2 mb-3 justify-center">
@@ -48,19 +47,18 @@
     <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN2</h3>
       <label for="ipAddress-WAN2" class="block mb-1 font-medium text-center">Enter IP Address:</label>
-      <div class="flex items-center justify-center gap-2 mb-3">
-        <div class="relative w-full max-w-xs">
-          <input
-            type="text"
-            id="ipAddress-WAN2"
-            placeholder="e.g., 1.1.1.1"
-            class="w-full px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center"
-          />
-        </div>
+      <div class="input-group w-full max-w-xs mx-auto mb-3">
+        <input
+          type="text"
+          id="ipAddress-WAN2"
+          placeholder="e.g., 1.1.1.1"
+          class="px-3 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-center"
+        />
         <button
           onclick="clearForm('WAN2')"
-          class="text-gray-400 hover:text-gray-600 text-xl cursor-pointer bg-transparent border-0 p-0 w-5 h-5 flex items-center justify-center"
+          class="clear-input text-gray-400 hover:text-gray-600 text-xl cursor-pointer bg-transparent border-0 p-0 w-5 h-5 flex items-center justify-center"
           aria-label="Clear input"
+          data-wan="WAN2"
         >&times;</button>
       </div>
       <div class="flex gap-2 mb-3 justify-center">
