--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <!-- WAN1 Section -->
     <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN1</h3>
-      <label for="ipAddress-WAN1" class="block mb-1 font-medium text-center">Enter IP Address:</label>
+      <label for="ipAddress-WAN1" class="block mb-1 font-medium text-left">Enter IP Address:</label>
       <div class="input-group w-full max-w-xs mx-auto mb-3">
         <input
           type="text"
@@ -47,7 +47,7 @@
     <!-- WAN2 Section -->
     <div class="wan-panel bg-white border border-gray-300 rounded-lg p-6 shadow-md w-full md:w-96">
       <h3 class="text-xl font-semibold text-center mb-4">WAN2</h3>
-      <label for="ipAddress-WAN2" class="block mb-1 font-medium text-center">Enter IP Address:</label>
+      <label for="ipAddress-WAN2" class="block mb-1 font-medium text-left">Enter IP Address:</label>
       <div class="input-group w-full max-w-xs mx-auto mb-3">
         <input
           type="text"
