--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
           type="text"
           id="ipAddress-WAN1"
           placeholder="e.g., 8.8.8.8"
-          class="flex-1 min-w-0 pl-2 pr-8 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-left"
+          class="flex-1 min-w-0 px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-left"
           onkeydown="if(event.key==='Enter') runLookup('WAN1')"
         />
         <button
@@ -53,7 +53,7 @@
           type="text"
           id="ipAddress-WAN2"
           placeholder="e.g., 1.1.1.1"
-          class="flex-1 min-w-0 pl-2 pr-8 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-left"
+          class="flex-1 min-w-0 px-4 py-2 border border-gray-300 rounded focus:outline-none focus:ring focus:border-blue-400 text-left"
           onkeydown="if(event.key==='Enter') runLookup('WAN2')"
         />
         <button
