html static - javascript dynamic

--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,11 @@
       
       <!-- Result Area -->
       <div id="result-WAN1" 
-           class="border border-gray-300 bg-gray-50 p-2 rounded text-sm mb-3 w-full flex flex-col items-center">
-        <div class="result-text w-full text-left">
-          <p class="text-gray-400 italic text-center">No results yet</p>
+           class="border border-gray-300 bg-gray-50 p-4 rounded-lg text-sm mb-3 w-full flex flex-col items-center gap-4 shadow">
+        <div class="result-text w-full text-center">
+          <p class="text-gray-400 italic">No results yet</p>
         </div>
-        <div class="result-logo mt-4 hidden">
+        <div class="result-logo hidden">
           <img src="" alt="ISP Logo" class="max-h-20 object-contain mx-auto">
         </div>
       </div>
@@ -81,11 +81,11 @@
       
       <!-- Result Area -->
       <div id="result-WAN2" 
-           class="border border-gray-300 bg-gray-50 p-2 rounded text-sm mb-3 w-full flex flex-col items-center">
-        <div class="result-text w-full text-left">
-          <p class="text-gray-400 italic text-center">No results yet</p>
+           class="border border-gray-300 bg-gray-50 p-4 rounded-lg text-sm mb-3 w-full flex flex-col items-center gap-4 shadow">
+        <div class="result-text w-full text-center">
+          <p class="text-gray-400 italic">No results yet</p>
         </div>
-        <div class="result-logo mt-4 hidden">
+        <div class="result-logo hidden">
           <img src="" alt="ISP Logo" class="max-h-20 object-contain mx-auto">
         </div>
       </div>
