padding and max-h de 40

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
           <p class="text-gray-400 italic">No results yet</p>
         </div>
         <div class="result-logo hidden">
-          <img src="" alt="ISP Logo" class="max-h-20 object-contain mx-auto">
+          <img src="" alt="ISP Logo" class="p-2 max-h-40 object-contain mx-auto">
         </div>
       </div>
       
@@ -86,7 +86,7 @@
           <p class="text-gray-400 italic">No results yet</p>
         </div>
         <div class="result-logo hidden">
-          <img src="" alt="ISP Logo" class="max-h-20 object-contain mx-auto">
+          <img src="" alt="ISP Logo" class="p-2 max-h-40 object-contain mx-auto">
         </div>
       </div>
       
