Change title and structure for ISP Lookup page
Updated the title and structure for ISP Lookup.

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Whois Lookup - WAN1 & WAN2</title>
+  <title>ISP Lookup</title>
   <link rel="stylesheet" href="styles.tailwind.css" />
   <link rel="icon" href="img/favicon.ico" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7483705672333613"
@@ -101,4 +101,5 @@
 
   <script src="javascript.js"></script>
 </body>
+
 </html>
