--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans p-6">
 
-  <h2 class="text-2xl font-bold text-center mb-6">Whois Lookup - WAN1 & WAN2</h2>
+  <h2 class="text-2xl font-bold text-center mb-6">ISP Lookup tool</h2>
 
   <div class="wan-container flex flex-col md:flex-row justify-center gap-6">
     
@@ -103,3 +103,4 @@
 </body>
 
 </html>
+
