--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,8 @@
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans p-6">
 
-  <h2 class="text-2xl font-bold text-center mb-6">ISP Lookup tool</h2>
+  <h2 class="text-2xl font-bold text-center mb-6">US ISP Lookup tool</h2>
+  <h3 class="text-center">Enter the IP Address to know who it belongs to (ATT, Comcast, Verizon, etc.)</h3>
 
   <div class="wan-container flex flex-col md:flex-row justify-center gap-6">
     
