--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
   <div class="text-center mb-6">
     <img src="img/us-map-flag-background.png" alt="US Map Flag" class="mx-auto" style="width: 5%; height: auto;">
   </div>
-  <h3 class="text-center" style="padding-bottom: 10px;">Enter the <b>IP Address</b> to know who it belongs to (ATT, Comcast, Verizon, etc.)</h3>
+  <h3 class="text-center" style="padding-bottom: 10px;">Enter the <b>IP Address</b> to know who it belongs to (AT&T, Comcast, Verizon, etc.)</h3>
 
   <div class="wan-container flex flex-col md:flex-row justify-center gap-6">
     
@@ -95,4 +95,5 @@
 </body>
 
 </html>
+
 
