--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,9 @@
     <img src="img/us-map-flag-background.png" alt="US Map Flag" class="mx-auto" style="width: 5%; height: auto;">
   </div>
   <h3 class="text-center" style="padding-bottom: 10px;">Enter the <b>IP Address</b> to know who it belongs to (AT&T, Comcast, Verizon, etc.)</h3>
+  <div class="text-center mb-4">
+    <p class="text-sm text-gray-600">Total Queries: <span id="query-counter" class="font-bold text-blue-600">0</span></p>
+  </div>
 
   <div class="wan-container flex flex-col md:flex-row justify-center gap-6">
     
