--- a/public/admin.html
+++ b/public/admin.html
@@ -283,6 +283,14 @@
             <option value="100">100</option>
           </select>
         </div>
+        <div>
+          <button
+            id="export-csv-btn"
+            style="background: #059669; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer; font-weight: 500;"
+          >
+            Export to CSV
+          </button>
+        </div>
       </div>
     </div>
 
