--- a/public/regusers.html
+++ b/public/regusers.html
@@ -49,7 +49,7 @@
     }
 
     .logo-container img {
-      max-height: 80px;
+      max-height: 120px;
       width: auto;
       object-fit: contain;
       filter: drop-shadow(0 4px 8px rgba(0, 0, 0, 0.1));
@@ -68,7 +68,6 @@
       width: 100%;
       display: flex;
       flex-direction: column;
-      align-items: center;
     }
 
     label {
@@ -78,7 +77,6 @@
       color: #4b5563;
       font-size: 14px;
       text-align: center;
-      width: 100%;
     }
 
     input {
@@ -89,8 +87,7 @@
       font-size: 14px;
       transition: all 0.3s ease;
       text-align: center;
-      display: block;
-      margin: 0 auto;
+      box-sizing: border-box;
     }
 
     input:focus {
@@ -164,7 +161,7 @@
       <form id="login-form" class="space-y-4">
         <h1>Welcome Back</h1>
         <div class="logo-container">
-          <img src="/img/us_isp_logos/generic_logo.png" alt="Logo" />
+          <img src="/img/who-is-Internet-modem-logo-v1.svg" alt="Logo" />
         </div>
         <div class="form-group">
           <label for="login-email">Email</label>
@@ -230,6 +227,14 @@
       </div>
     </div>
 
+    <!-- Navigation Tabs -->
+    <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 8px; margin-bottom: 24px; display: flex; gap: 8px;">
+      <button id="tab-queries" class="tab-btn active" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #2563eb; color: white;">Queries</button>
+      <button id="tab-users" class="tab-btn" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: transparent; color: #4b5563;">Users</button>
+    </div>
+
+    <!-- Queries Section -->
+    <div id="queries-section">
     <!-- Stats Section -->
     <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px; margin-bottom: 24px;">
       <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
@@ -339,9 +344,144 @@
         Next
       </button>
     </div>
+    </div>
+    <!-- End Queries Section -->
+
+    <!-- Users Section -->
+    <div id="users-section" class="hidden">
+      <!-- Stats Section for Users -->
+      <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 16px; margin-bottom: 24px;">
+        <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+          <h3 style="font-size: 0.875rem; color: #4b5563; margin-bottom: 4px;">Total Users</h3>
+          <p style="font-size: 1.875rem; font-weight: bold; color: #2563eb;" id="total-users">0</p>
+        </div>
+        <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+          <h3 style="font-size: 0.875rem; color: #4b5563; margin-bottom: 4px;">Current Page</h3>
+          <p style="font-size: 1.875rem; font-weight: bold; color: #16a34a;" id="users-current-page">1</p>
+        </div>
+        <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05);">
+          <h3 style="font-size: 0.875rem; color: #4b5563; margin-bottom: 4px;">Total Pages</h3>
+          <p style="font-size: 1.875rem; font-weight: bold; color: #9333ea;" id="users-total-pages">0</p>
+        </div>
+      </div>
+
+      <!-- Search and Controls for Users -->
+      <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 24px; box-shadow: 0 1px 2px rgba(0,0,0,0.05); margin-bottom: 24px;">
+        <div style="display: flex; gap: 16px; align-items: flex-end; flex-wrap: wrap;">
+          <div style="flex: 1; min-width: 200px;">
+            <label for="users-search-input" style="display: block; margin-bottom: 4px; font-weight: 500;">Search</label>
+            <input
+              type="text"
+              id="users-search-input"
+              placeholder="Search by name or email..."
+              style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;"
+            />
+          </div>
+          <div>
+            <label for="users-sort-field" style="display: block; margin-bottom: 4px; font-weight: 500;">Sort By</label>
+            <select id="users-sort-field" style="padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;">
+              <option value="created_at">Date Created</option>
+              <option value="first_name">First Name</option>
+              <option value="last_name">Last Name</option>
+              <option value="email">Email</option>
+              <option value="last_login">Last Login</option>
+            </select>
+          </div>
+          <div>
+            <label for="users-sort-order" style="display: block; margin-bottom: 4px; font-weight: 500;">Order</label>
+            <select id="users-sort-order" style="padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;">
+              <option value="desc">Descending</option>
+              <option value="asc">Ascending</option>
+            </select>
+          </div>
+          <div>
+            <label for="users-page-size" style="display: block; margin-bottom: 4px; font-weight: 500;">Per Page</label>
+            <select id="users-page-size" style="padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px;">
+              <option value="25">25</option>
+              <option value="50" selected>50</option>
+              <option value="100">100</option>
+            </select>
+          </div>
+        </div>
+      </div>
+
+      <!-- Users Table -->
+      <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; box-shadow: 0 1px 2px rgba(0,0,0,0.05); overflow: hidden;">
+        <div style="overflow-x: auto;">
+          <table style="width: 100%; border-collapse: collapse;">
+            <thead style="background: #f3f4f6; border-bottom: 1px solid #d1d5db;">
+              <tr>
+                <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">ID</th>
+                <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">First Name</th>
+                <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Last Name</th>
+                <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Email</th>
+                <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Created At</th>
+                <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Last Login</th>
+                <th style="padding: 8px; text-align: center; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Actions</th>
+              </tr>
+            </thead>
+            <tbody id="users-table-body">
+              <tr>
+                <td colspan="7" style="padding: 32px; text-align: center; color: #6b7280;">Loading...</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+
+      <!-- Pagination for Users -->
+      <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 24px;">
+        <button
+          id="users-prev-page"
+          style="background: #4b5563; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;"
+          disabled
+        >
+          Previous
+        </button>
+        <div style="font-size: 0.875rem; color: #4b5563;">
+          Page <span id="users-page-info">1 of 1</span>
+        </div>
+        <button
+          id="users-next-page"
+          style="background: #4b5563; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;"
+          disabled
+        >
+          Next
+        </button>
+      </div>
+    </div>
+    <!-- End Users Section -->
+
   </div>
 
-  <script src="admin.js?v=10"></script>
+  <!-- Edit User Modal -->
+  <div id="edit-user-modal" class="modal hidden" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); display: none; align-items: center; justify-content: center; z-index: 1000;">
+    <div style="background: white; border-radius: 8px; padding: 32px; max-width: 500px; width: 90%;">
+      <h2 style="font-size: 1.5rem; font-weight: bold; margin-bottom: 24px;">Edit User</h2>
+      <form id="edit-user-form">
+        <input type="hidden" id="edit-user-id" />
+        <div style="margin-bottom: 16px;">
+          <label for="edit-first-name" style="display: block; margin-bottom: 4px; font-weight: 500;">First Name</label>
+          <input type="text" id="edit-first-name" required style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px; box-sizing: border-box;" />
+        </div>
+        <div style="margin-bottom: 16px;">
+          <label for="edit-last-name" style="display: block; margin-bottom: 4px; font-weight: 500;">Last Name</label>
+          <input type="text" id="edit-last-name" required style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px; box-sizing: border-box;" />
+        </div>
+        <div style="margin-bottom: 16px;">
+          <label for="edit-email" style="display: block; margin-bottom: 4px; font-weight: 500;">Email</label>
+          <input type="email" id="edit-email" required style="width: 100%; padding: 8px 16px; border: 1px solid #d1d5db; border-radius: 4px; box-sizing: border-box;" />
+        </div>
+        <div id="edit-user-error" style="color: #ef4444; font-size: 14px; margin-bottom: 16px; display: none;"></div>
+        <div style="display: flex; gap: 8px; justify-content: flex-end;">
+          <button type="button" id="cancel-edit-btn" style="background: #6b7280; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;">Cancel</button>
+          <button type="submit" style="background: #2563eb; color: white; padding: 8px 16px; border-radius: 4px; border: none; cursor: pointer;">Save Changes</button>
+        </div>
+      </form>
+    </div>
+  </div>
+
+  <script src="admin.js?v=11"></script>
 </body>
 </html>
 
