--- a/public/reguser.html
+++ b/public/reguser.html
@@ -228,9 +228,11 @@
     </div>
 
     <!-- Navigation Tabs -->
-    <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 8px; margin-bottom: 24px; display: flex; gap: 8px;">
+    <div style="background: white; border: 1px solid #d1d5db; border-radius: 8px; padding: 8px; margin-bottom: 24px; display: flex; gap: 8px; align-items: center; flex-wrap: wrap;">
       <button id="tab-queries" class="tab-btn active" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #2563eb; color: white;">Queries</button>
       <button id="tab-users" class="tab-btn" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: transparent; color: #4b5563;">Users</button>
+      <div style="flex: 1;"></div>
+      <a href="/api-tokens" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #059669; color: white; text-decoration: none; display: inline-block;">API Tokens</a>
     </div>
 
     <!-- Queries Section -->
