role management and audit

--- a/public/reguser.html
+++ b/public/reguser.html
@@ -234,6 +234,7 @@
       <button id="tab-queries" class="tab-btn active" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #2563eb; color: white;">Queries</button>
       <button id="tab-users" class="tab-btn" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: transparent; color: #4b5563;">Users</button>
       <div style="flex: 1;"></div>
+      <a href="/role-management" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #7c3aed; color: white; text-decoration: none; display: inline-block;">Role Management</a>
       <a href="/api-tokens" style="padding: 8px 24px; border-radius: 4px; border: none; cursor: pointer; font-weight: 600; background: #059669; color: white; text-decoration: none; display: inline-block;">API Tokens</a>
     </div>
 
@@ -419,6 +420,7 @@
                 <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">First Name</th>
                 <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Last Name</th>
                 <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Email</th>
+                <th style="padding: 8px; text-align: center; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Role</th>
                 <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Created At</th>
                 <th style="padding: 8px; text-align: left; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Last Login</th>
                 <th style="padding: 8px; text-align: center; font-size: 0.75rem; font-weight: 600; color: #374151; text-transform: uppercase;">Actions</th>
